--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif8266
 board = d1
 framework = arduino
-lib_deps = miguelbalboa/MFRC522@^1.4.10
+lib_deps = 
+	miguelbalboa/MFRC522@^1.4.10
+	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
+	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+	bblanchon/ArduinoJson@^6.19.2
